# vetbiz_extractor

./: .gitignore  README.md  main.py  pyproject.toml  queries.json  requirements.txt  vetbiz_extractor-0.1.0-py3-none-any.whl
core/: extract_insights.py
dashboard_uses/: etani_tables.py  powerbi.py
resources/: README.md  dev.py  queries.json
scripts/: A_Journals-A.Journals advance editor.txt  A_Journals.py  dfs_from_same_db_conn.py  dfs_from_same_db_conn_refactored.py  filtered_active_customers.py
vetbiz_extractor/core/: extract_insights.py  insights_extractor.py
vetbiz_extractor/utils/: common.py
